client/src/css/components/products.css
.products-container {
    background: #e8e8e8;
    box-shadow: 50vw 0 #e8e8e8, -50vw 0 #e8e8e8;
    padding-top: 20px;
}

.products {
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;

    .product {
        position: relative;
        background: #fff;
        padding: 30px;
        box-sizing: inherit;
        width: calc(100% - 61px);
        margin-bottom: 1px;
        border-radius: 10px;
        color: var(--bs-black);
        text-decoration: none;
        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
        padding-top: 200px;
        overflow: hidden;
        color: #fff;
        grid-template-rows: [title] 65px [desc] 40px [price] 60px [buttons] 50px;
        display: grid;
        align-items: self-end;

        &::after {
            content: " ";
            /*background: linear-gradient(to bottom, transparent, rgba(255,255,255,0.5) 20%, rgba(255,255,255,0.7) 80%, rgba(255,255,255,0.4) 95%);*/
            background: linear-gradient(to bottom, transparent, rgba(0,0,0,0.5) 20%, rgba(0,0,0,0.7) 80%, rgba(0,0,0,0.4) 95%);
            position: absolute;
            bottom: 0;
            left: 0;
            z-index: 1;
            width: 100%;
            height: 60%;
        }

        > *:not(.image) {
            position: relative;
            z-index: 10
        }

        .image {
            position: absolute;
            left: 0;
            top: 0;
            z-index: 0;

            width: 100%;
            height: 100%;
            border-radius: 5px;
            overflow: hidden;
            box-shadow: 4px 7px 12px rgba(0,0,0,0.1);

            img {
                transform: scale(1.4);
                transform-origin: top center;
                width: 100%;
            }
        }

        .title {
            grid-area: title/1;
            text-align: center;
            font-size: 18px;
            font-weight: 500;
        }

        .short {
            grid-area: desc/1;
            font-size: 12px;
            text-align: center;
            min-height: 20px;
        }

        .price {
            grid-area: price/1;
            padding: 5px 20px;
            font-size: 20px;
            font-weight: bold;
            border-radius: 10px;
            text-align: center;
            margin: 10px 0;
        }

        .btn-view:hover {
            transform: scale(1.1);
            filter: contrast(2);
        }

        .cta {
            grid-area: buttons/1;
            margin: auto;
            display: inline-flex;
            position: relative;
            left: 50%;
            transform: translateX(-50%);
        }
    }

    .addToBasket{
        &:after {
            content: " ";
            position: absolute;
            left: 0;
            bottom: 0;
            width: 100%;
            height: 100%;
            background: #fff;
            border-radius: 10px;
            opacity: 0.2;
            animation: addToBasket 2s ease-out;
            z-index: 100;
            box-shadow: 2px 2px 3px silver;
        }

        .btn-add {
            animation: blink 2s linear;
        }
    }
}

body:has(.addToBasket) .basket {
    animation: basketScale 0.75s ease-out;
    animation-delay: 0.5s;
}

@keyframes basketScale {
    0% { transform: scale(1) };
    50% { transform: scale(1.5) };
    100% { transform: scale(1) };
}

@keyframes blink {
    0% { color: rgba(255,255,255,1) }
    25% { color: rgba(255,255,255,0) }
    50% { color: rgba(255,255,255,1) }
    75% { color: rgba(255,255,255,0) }
}

@keyframes addToBasket {
    0% {
        left: 0%;
        bottom: 0%;
        transform: scale(1);
        opacity: 0.2;
    }

    100% {
        left: 150%;
        bottom: 100%;
        transform: scale(0.2) rotate(10deg);
        opacity: 0;
    }
}

@media screen and (max-width: 1000px) {
    .products {
        grid-template-columns: 100%;

        .product {
            width: calc(100% - 100px);
            margin: 20px;
        }
    }

}

